<resources>
    <string name="app_name">LifeCard</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LogIn</string>
    <string name="registration">Registration</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="mn_home">Home</string>
    <string name="mn_profile">Profile</string>
    <string name="mn_options">Options</string>
    <string name="log_out">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="holder_name">Holder name</string>
    <string name="card_number">Card number</string>
    <string name="card_holder">Card holder</string>
    <string name="more_info">More info</string>
    <string name="canceled">Cancelled</string>
    <string name="your_life_cards">Your Life Cards</string>
    <string name="add_loyalty_card">Add loyalty card</string>
    <string name="language">Languages</string>
    <string name="user_password_incorrect">User or password is incorrect</string>
</resources>