<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/marginLeft50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/marginRight50" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/marginLeft50"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAppearance="@style/activity_title"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity=""
        android:text="@string/user_email"
        android:textAppearance="@style/labelFormText"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/loginTitleText"
        tools:layout_editor_absoluteX="50dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userEditText"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="kurdadze@gmail.com"
        app:layout_constraintTop_toBottomOf="@+id/userLabelText"
        tools:layout_editor_absoluteX="50dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/password"
        android:textAppearance="@style/labelFormText"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/userEditText"
        tools:layout_editor_absoluteX="50dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="123"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabelText"
        tools:layout_editor_absoluteX="50dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_logoin"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintBottom_toTopOf="@+id/button_registration"
        tools:layout_editor_absoluteX="49dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_registration"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        tools:layout_editor_absoluteX="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>